--- a/_dev/css/base/core.scss
+++ b/_dev/css/base/core.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&family=Poiret+One&family=Urbanist:wght@100;200;300;400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Urbanist:wght@100;200;300;400;600&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -7,7 +5,7 @@ html {
 }
 
 body {
-    font-family: 'Poiret One', cursive;
+    font-family: '', cursive;
     overflow-x: hidden;
     font-weight: 100;
     font-size: 20px;
@@ -15,12 +13,8 @@ body {
     background-color: #E7E7E5;
 }
 h1, h2, h3, h4 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: '', sans-serif;
 }
-
-$turquoise: #9DD9CF;
-$white: #ffffff;
-$dark: #1C1C1C;
 
 
 a {
@@ -102,41 +96,5 @@ $containerMobile: 90vw;
     html {
         margin-top: 0px !important;
     }
-}
-
-.buttonTurquoise {
-    background-color: $turquoise;
-    color: $white;
-    padding: 14px 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    max-width: fit-content;
-    margin: 20px 0;
-    text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    letter-spacing: 2px;
-    font-size: 14px;
-    transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -ms-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
-}
-
-.buttonTurquoise:hover {
-    background-color: $dark;
-    color: $white;
-}
-
-.buttonTurquoise:hover > svg > image {
-    filter: invert(1) brightness(1);
-    opacity: .6;
-}
-
-.font--turquoise {
-    color: $turquoise;
 }
 
