--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -1,9 +1,11 @@
 @import url("https://unpkg.com/swiper/swiper-bundle.min.css");
 
-/* ------ Layouts ------ */
+/* ------ Base ------ */
 
 @import "./base/reset.scss";
 @import "./base/core.scss";
+
+/* ------ Layouts ------ */
 
 /* ------ Components ------ */
 
