--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -6,6 +6,8 @@
 @import "./base/core.scss";
 
 /* ------ Layouts ------ */
+@import "./layout/header.scss";
 
 /* ------ Components ------ */
 
+@import "./components/hero.scss";
