--- a/_dev/css/layout/header.scss
+++ b/_dev/css/layout/header.scss
@@ -52,6 +52,11 @@
         @include responsive('small') {
             max-height: 70px;
         }
+        transition: all .3s ease-in-out;
+        -webkit-transition: all .3s ease-in-out;
+        -moz-transition: all .3s ease-in-out;
+        -ms-transition: all .3s ease-in-out;
+        -o-transition: all .3s ease-in-out;
     }
 }
 
