--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -1,7 +1,6 @@
 @import url("https://unpkg.com/swiper/swiper-bundle.min.css");
 
 /* ------ Base ------ */
-
 @import "./base/reset.scss";
 @import "./base/core.scss";
 
@@ -9,5 +8,12 @@
 @import "./layout/header.scss";
 
 /* ------ Components ------ */
-
 @import "./components/hero.scss";
+
+
+@import "./components/map.scss";
+
+
+
+/* ------- FOOTER -----------*/
+@import "./layout/footer.scss";
