Add About section

--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -9,6 +9,7 @@
 
 /* ------ Components ------ */
 @import "./components/hero.scss";
+@import "./components/about.scss";
 
 
 @import "./components/map.scss";
