--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -10,6 +10,7 @@
 /* ------ Components ------ */
 @import "./components/hero.scss";
 @import "./components/about.scss";
+@import "./components/realisation.scss";
 
 
 @import "./components/map.scss";
