Add two sections in offer page

--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -12,6 +12,8 @@
 @import "./components/about.scss";
 @import "./components/realisation.scss";
 
+@import "./components/offer/regeneration.scss";
+
 
 @import "./components/map.scss";
 
