--- a/_dev/css/components/about.scss
+++ b/_dev/css/components/about.scss
@@ -30,6 +30,10 @@ h4 {
     width: 100%;
     max-width: 80vw;
     margin: auto;
+
+    @include responsive('tablet') {
+        max-width: 90vw;
+    }
 }
 
 .about-img {
@@ -43,7 +47,8 @@ h4 {
     position: relative;
 
     @include responsive('tablet') {
-        padding: $container-padding;
+        padding: 0;
+        padding-top: $container-padding;
     }
 }
 
@@ -79,7 +84,8 @@ h4 {
     padding-left: calc(#{$container-padding} + 15px);
 
     @include responsive('tablet') {
-        padding: $container-padding;
+        padding: $container-padding 0;
+        max-width: 100%;
     }
 }
 
@@ -93,6 +99,8 @@ h4 {
 
     @include responsive('tablet') {
         flex-direction: column;
+        max-width: 90vw;
+        margin: auto;
     }
 
     p {
