--- a/_dev/css/components/offer/regeneration.scss
+++ b/_dev/css/components/offer/regeneration.scss
@@ -110,10 +110,16 @@ h3 {
 .offer-repair-effect {
     display: flex;
     gap: 1vw;
+    justify-content: center;
 
-    @include responsive('small') {
-        flex-direction: column;
-        align-items: center;
+    .offer-repair-effect-container {
+        display: flex;
+        gap: 1vw;
+
+        @include responsive('small') {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
 
