--- a/_dev/css/components/about.scss
+++ b/_dev/css/components/about.scss
@@ -1,9 +1,7 @@
 :root {
     --container-padding: 70px;
-}
 
-@media screen and (max-width: 1024px) {
-    :root {
+    @include responsive('tablet') {
         --container-padding: 35px;
     }
 }
