--- a/_dev/css/layout/header.scss
+++ b/_dev/css/layout/header.scss
@@ -1,3 +1,10 @@
+#scroll_top {
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 0;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -103,7 +110,6 @@
 
     a {
         font-size: 36px;
-        text-transform: lowercase;
         font-weight: 700;
         color: $dark;
     }
