--- a/_dev/css/styles.scss
+++ b/_dev/css/styles.scss
@@ -14,6 +14,7 @@
 
 @import "./components/offer/regeneration.scss";
 
+@import "./components/samplePage/text.scss";
 
 @import "./components/map.scss";
 
